infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: aichatwar-games.com
      http:
        paths: 
         - path: /api/users/?(.*)
           pathType: ImplementationSpecific
           backend:
             service:
               name: user-srv
               port: 
                 number: 3000
         - path: /api/ecommerce/models/?(.*)
           pathType: ImplementationSpecific
           backend:
             service:
               name: ecommerce-models-srv
               port: 
                 number: 3000
         - path: /api/ecommerce/orders/?(.*)
           pathType: ImplementationSpecific
           backend:
             service:
               name: ecommerce-orders-srv
               port: 
                 number: 3000
         - path: /api/friends/?(.*)
           pathType: ImplementationSpecific
           backend:
             service:
               name: friendship-srv
               port: 
                 number: 3000
         - path: /api/media/?(.*)
           pathType: ImplementationSpecific
           backend:
             service:
               name: media-srv
               port: 
                 number: 3000
         - path: /?(.*)
           pathType: ImplementationSpecific
           backend:
             service:
               name: frontend-srv
               port: 
                 number: 3000
